--- a/support/cpp/gcc/Makefile.in
+++ b/support/cpp/gcc/Makefile.in
@@ -1373,12 +1373,12 @@ TREECHECKING = @TREECHECKING@
 # The full name of the driver on installation
 FULL_DRIVER_NAME=$(target_noncanonical)-gcc-$(version)$(exeext)
 
-MOSTLYCLEANFILES = insn-flags.h insn-config.h insn-codes.h \
+MOSTLYCLEANFILES = \
  insn-output.cc insn-recog.cc insn-emit.cc insn-extract.cc insn-peep.cc \
- insn-attr.h insn-attr-common.h insn-attrtab.cc insn-dfatab.cc \
- insn-latencytab.cc insn-opinit.cc insn-opinit.h insn-preds.cc insn-constants.h \
+ insn-attrtab.cc insn-dfatab.cc \
+ insn-latencytab.cc insn-opinit.cc insn-opinit.h insn-preds.cc \
  tm-preds.h tm-constrs.h checksum-options gimple-match.cc generic-match.cc \
- tree-check.h min-insn-modes.cc insn-modes.cc insn-modes.h insn-modes-inline.h \
+ tree-check.h insn-modes.cc insn-modes.h insn-modes-inline.h \
  genrtl.h gt-*.h gtype-*.h gtype-desc.cc gtyp-input.list \
  case-cfn-macros.h cfn-operators.pd \
  xgcc$(exeext) cpp$(exeext) $(FULL_DRIVER_NAME) \
@@ -2373,7 +2373,7 @@ s-gtype: $(EXTRA_GTYPE_DEPS) build/gengtype$(build_exeext) \
 
 generated_files = config.h tm.h $(TM_P_H) $(TM_D_H) $(TM_H) multilib.h \
        $(simple_generated_h) specs.h \
-       tree-check.h genrtl.h insn-modes.h insn-modes-inline.h \
+       tree-check.h genrtl.h \
        tm-preds.h tm-constrs.h \
        $(ALL_GTFILES_H) gtype-desc.cc gtype-desc.h version.h \
        options.h target-hooks-def.h insn-opinit.h \
