regression test summary depends on test set
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/cpp/sdcc@13670 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/support/regression/Makefile.in
+++ b/support/regression/Makefile.in
@@ -345,7 +345,7 @@ $(PORT_RESULTS_DIR)/%.log: $(PORT_RESULTS_DIR)/%.out
 
 # Rule to summarise the results for one port after all of the tests
 # have been run.
-$(RESULTS_DIR)/$(PORT).sum: $(PORT_RESULTS)
+$(RESULTS_DIR)/$(PORT).sum: $(PORT_RESULTS) cases/MakeList
 	${M_V_at}echo | cat - $(PORT_RESULTS:%.log=%.out) | $(PYTHON) $(srcdir)/collate-results.py $(PORT) > $@
 
 port-fwklib: port-dirs $(EXTRAS) $(FWKLIB)
