cpp: reduce diff against upstream
git-svn-id: https://svn.code.sf.net/p/sdcc/code/branches/cpp/sdcc@13671 4a8a32a2-be11-0410-ad9d-d568d2c75423

--- a/support/cpp/gcc/configure.ac
+++ b/support/cpp/gcc/configure.ac
@@ -2777,7 +2777,7 @@ changequote([,])dnl
 else
 	AC_MSG_RESULT($gcc_cv_ld)
 	in_tree_ld=no
-	gcc_cvs_ld_program=`dirname $gcc_cv_ld`/`basename $gcc_cv_ld $host_exeext`
+	gcc_cvs_ld_program=false # `dirname $gcc_cv_ld`/`basename $gcc_cv_ld $host_exeext`
 	ORIGINAL_LD_BFD_FOR_TARGET=${gcc_cvs_ld_program}.bfd$host_exeext
 	ORIGINAL_LD_GOLD_FOR_TARGET=${gcc_cvs_ld_program}.gold$host_exeext
 fi
