--- a/configure.ac
+++ b/configure.ac
@@ -406,48 +406,24 @@ if test "$ac_cv_c_compiler_gnu" = "yes"; then
   fi
 
   WALL_FLAG="-Wall -Wno-parentheses"
-  C99_FLAG="--std=c99"
   MAKEDEP_CXX="$CXX $sdcc_cv_MM"
   MAKEDEP="$CC $sdcc_cv_MM"
 else
   sdcc_IS_SUNPRO
-  if test "$sdcc_cv_c_compiler_sunpro" = "yes"; then
-    C99_FLAG="-xc99"
-    CFLAGS="-xO2 ${C99_FLAG} ${CFLAGS}"
-    CXXFLAGS="-xO2 ${CXXFLAGS}"
-    WALL_FLAG=
-    MAKEDEP="$CC ${C99_FLAG} -xM1"
-    MAKEDEP_CXX="$CXX -xM1"
-  fi
 fi
 
 AC_SUBST(MAKEDEP)
 AC_SUBST(MAKEDEP_CXX)
 AC_SUBST(WALL_FLAG)
-AC_SUBST(C99_FLAG)
 
-# Try to append a c99 flag
+# Check for c11
 # -------------------------------------------------------------------------
-AC_PROG_CC_C99
-if test "$ac_cv_prog_cc_c99" != "no"; then
-  CFLAGS="$ac_cv_prog_cc_c99 ${CFLAGS}"
+if test "$ac_cv_prog_cc_c11" == "no"; then
+  AC_MSG_ERROR([Could not find C11-capable host compiler.])
 fi
 
 # Checks for typedefs, structures, and compiler characteristics.
 # ===========================================================================
-m4_warn([obsolete],
-[your code may safely assume C89 semantics that RETSIGTYPE is void.
-Remove this warning and the `AC_CACHE_CHECK' when you adjust the code.])dnl
-AC_CACHE_CHECK([return type of signal handlers],[ac_cv_type_signal],[AC_COMPILE_IFELSE(
-[AC_LANG_PROGRAM([#include <sys/types.h>
-#include <signal.h>
-],
-		 [return *(signal (0, 0)) (0) == 1;])],
-		   [ac_cv_type_signal=int],
-		   [ac_cv_type_signal=void])])
-AC_DEFINE_UNQUOTED([RETSIGTYPE],[$ac_cv_type_signal],[Define as the return type of signal handlers
-		    (`int' or `void').])
-
 
 AC_CHECK_SIZEOF(char)
 AC_CHECK_SIZEOF(short)
